--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(LR6)
+project(LR7)
 
 
 set(CMAKE_CXX_STANDARD 20)
@@ -11,26 +11,20 @@ set(CMAKE_CXX_FLAGS "-fsanitize=address")
 add_executable(LR6 ${SOURCES}
         Lab_7.cpp
         global_utils.cpp
-        global_utils.h
 
         Task_1/Task_1.cpp
-        Task_1/task_1.h
         Task_1/utils_1.cpp
 
         Task_2/Task_2.cpp
-        Task_2/task_2.h
         Task_2/utils_2.cpp
 
         Task_3/Task_3.cpp
-        Task_3/task_3.h
         Task_3/utils_3.cpp
 
         Task_4/Task_4.cpp
-        Task_4/task_4.h
         Task_4/utils_4.cpp
 
-        Task_5/Task_5.cpp
-        Task_5/utils_5.cpp
-        Task_5/task_5.h
-        Task_5/structure_utils.cpp
+        Task_5/src/Task_5.cpp
+        Task_5/src/utils_5.cpp
+        Task_5/src/structure_utils.cpp
 )
